// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Typography /> should render and match snapshot for default props 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 16,
        "lineHeight": 22,
      },
    ]
  }
  testID="undefined"
  variant="body"
/>
`;

exports[`<Typography /> should render and match snapshot for variant caption1 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 12,
        "lineHeight": 16,
      },
    ]
  }
  testID="undefined"
  variant="caption1"
/>
`;

exports[`<Typography /> should render and match snapshot for variant caption2 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 11,
        "lineHeight": 13,
      },
    ]
  }
  testID="undefined"
  variant="caption2"
/>
`;

exports[`<Typography /> should render and match snapshot for variant footnote 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 13,
        "lineHeight": 18,
      },
    ]
  }
  testID="undefined"
  variant="footnote"
/>
`;

exports[`<Typography /> should render and match snapshot for variant headline 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 17,
        "lineHeight": 22,
      },
    ]
  }
  testID="undefined"
  variant="headline"
/>
`;

exports[`<Typography /> should render and match snapshot for variant largeTitle 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 34,
        "lineHeight": 41,
      },
    ]
  }
  testID="undefined"
  variant="largeTitle"
/>
`;

exports[`<Typography /> should render and match snapshot for variant subhead 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 15,
        "lineHeight": 20,
      },
    ]
  }
  testID="undefined"
  variant="subhead"
/>
`;

exports[`<Typography /> should render and match snapshot for variant title1 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 28,
        "lineHeight": 34,
      },
    ]
  }
  testID="undefined"
  variant="title1"
/>
`;

exports[`<Typography /> should render and match snapshot for variant title2 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 22,
        "lineHeight": 28,
      },
    ]
  }
  testID="undefined"
  variant="title2"
/>
`;

exports[`<Typography /> should render and match snapshot for variant title3 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 20,
        "lineHeight": 25,
      },
    ]
  }
  testID="undefined"
  variant="title3"
/>
`;

exports[`<Typography /> should render and match snapshot for variant title4 1`] = `
<Text
  accessibility="undefined"
  accessibilityLabel="undefined"
  style={
    Array [
      Object {
        "color": "#212121",
        "fontSize": 18,
        "lineHeight": 22,
      },
    ]
  }
  testID="undefined"
  variant="title4"
/>
`;
